# Ogex

./: .gitignore  Cargo.toml  MIGRATION.md  README.md  renovate.json  test_ogex.html  test_ogex.py  test_ogex.ts  test_ogex_node.mjs
.githooks/: pre-commit
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  pr-checks.yml  push-checks.yml  release-dryrun.yml  release.yml  wasm-test.yml
ogex/: Cargo.toml  README.md  README.wasm.md
ogex-cli/: Cargo.toml  LICENSE  README.md
ogex-cli/src/: main.rs
ogex-core/: Cargo.toml
ogex-core/benches/: bench.rs
ogex-core/src/: ast.rs  engine.rs  error.rs  ffi.rs  groups.rs  lexer.rs  lib.rs  nfa.rs  parser.rs  replace.rs  transpiler.rs
ogex-core/tests/: compatibility_tests.rs  poc_integration_tests.rs
ogex-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
ogex-python/src/: lib.rs
ogex-python/tests/: test_ogex.py
ogex/benches/: bench.rs
ogex/src/: ast.rs  engine.rs  error.rs  ffi.rs  groups.rs  lexer.rs  lib.rs  nfa.rs  parser.rs  replace.rs  transpiler.rs  wasm.rs
ogex/tests/: backreference_tests.rs  compatibility_tests.rs  pathological_tests.rs  poc_integration_tests.rs  property_tests.rs
