[workspace]
members = ["ogex-core", "ogex-cli", "ogex-python"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ogex Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/NiXTheDev/Ogex"
homepage = "https://github.com/NiXTheDev/Ogex"
description = "A regex engine with unified syntax for named groups and backreferences"
keywords = ["regex", "parsing", "text", "pattern"]
categories = ["text-processing", "parsing"]

[workspace.dependencies]
thiserror = "1.0"
criterion = "0.5"

[profile.release]
lto = true

