[package]
name = "ogex-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
repository.workspace = true
homepage.workspace = true
description = "CLI tool for Ogex regex engine"

[[bin]]
name = "ogex"
path = "src/main.rs"

[dependencies]
ogex = { path = "../ogex" }
clap = { version = "4.0", features = ["derive"] }
colored = "3.1"
