[package]
name = "ogex"
version = "0.1.0"
edition = "2024"
description = "Python bindings for Ogex regex engine"
license = "MIT OR Apache-2.0"

[lib]
name = "ogex"
crate-type = ["cdylib"]

[dependencies]
ogex-core = { path = "../ogex-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.23"
