[package]
name = "ogex-python"
version = "0.1.0"
edition.workspace = true
description = "Python bindings for Ogex regex engine"
license.workspace = true

[lib]
name = "ogex"
crate-type = ["cdylib"]

[dependencies]
ogex_lib = { path = "../ogex", package = "ogex" }
pyo3 = { version = "0.23", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.23"
