[package]
name = "ogex-python"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for Ogex regex engine"
documentation = "https://github.com/NiXTheDev/Ogex#readme"
readme = "README.md"

[lib]
name = "ogex_py"
crate-type = ["cdylib"]

pyo3 = { version = "0.23", features = ["extension-module"] }
ogex = "0.1.0"

[build-dependencies]
pyo3-build-config = "0.23"
