[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ogex"
version = "0.1.0"
description = "Python bindings for Ogex regex engine with unified syntax"
readme = "README.md"
license = { text = "MPL-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Ogex Contributors" }]
keywords = ["regex", "parsing", "text", "pattern-matching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries",
]
urls = { Homepage = "https://github.com/NiXTheDev/Ogex", Repository = "https://github.com/NiXTheDev/Ogex" }

[tool.maturin]
features = ["pyo3/extension-module"]
