[package]
name = "ogex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
thiserror = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2.114", optional = true }
js-sys = { version = "0.3.91", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = []
std = ["thiserror"]
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]

[lib]
name = "ogex"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.8"
proptest = "1.5"

